--- a/base64.html
+++ b/base64.html
@@ -6,6 +6,15 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title></title>
 		<style type="text/css">
+			body{
+				width: 100%;
+				height: 100%;
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+				justify-content: center;
+				overflow: hidden;
+			}
 			.select{
 				width: 300px;
 				border-radius: 10px;
@@ -13,6 +22,7 @@
 				border: 1px solid #333;
 				margin-top: 20px;
 			}
+			
 		</style>
 	</head>
 	<body>
