--- a/base64.html
+++ b/base64.html
@@ -6,6 +6,10 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		<title></title>
 		<style type="text/css">
+			*{
+				margin: 0;
+				padding: 0;
+			}
 			body{
 				width: 100%;
 				height: 100%;
@@ -15,17 +19,40 @@
 				justify-content: center;
 				overflow: hidden;
 			}
+			input,p,span,time{
+				z-index: 10;
+			}
+			input{
+				position: absolute;
+				top: 10rem;
+				left: 50rem;
+			}
+			span{
+				position: absolute;
+				top: 12rem;
+				left: 50rem;
+			}
+			time{
+				position: absolute;
+				top: 14rem;
+				left: 50rem;
+			}
 			.select{
-				width: 300px;
-				border-radius: 10px;
+				width: 100%;
+				/* border-radius: 10px; 
 				padding: 5px;
 				border: 1px solid #333;
-				margin-top: 20px;
+				margin-top: 20px; */
+				z-index: 1;
+				position: absolute;
+				left: 0;
+				top: 0;
 			}
 			
 		</style>
 	</head>
 	<body>
+		<p>定制属于你自己的网页，当然现在你还只能选择一个背景</p>
 		<input type="file" >
 		<br>
 		<img src="" alt="">
