--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 
 		btns.onmouseover = function() {
 			divs.style.display = "block";
+			divs.style.opacity = 1;
+			// alert('你就这么想联系我么？你既然都知道看到这里了，就不用我多说什么了把。在下QQ号：1522787661');
+			
 		}
 		btns.onmouseout = function() {
 			divs.style.display = "none";
