--- a/firstword.html
+++ b/firstword.html
@@ -4,23 +4,22 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>这里是老三，这是咱的发布页</title>
+		<title></title>
+		
 		<script src="js/jquery.js" type="text/javascript" charset="utf-8"></script>
 		<script src="js/slider.js" type="text/javascript" charset="utf-8"></script>
 		<!-- <link rel="stylesheet" type="text/css" href="css/main.css" /> -->
-
+		
 		<link rel="stylesheet" type="text/css" href="css/top.css" />
 		<!-- <link rel="stylesheet" type="text/css" href="css/index_main.css" /> -->
-
-
+		
+		
 		<link rel="stylesheet" type="text/css" href="CSS1/textmain.css" />
 		<link rel="stylesheet" type="text/css" href="CSS1/test_index_main.css" />
-
-
-
-
-
-		<script src="js/time.js" type="text/javascript" charset="utf-8"></script>
+		
+		<link rel="stylesheet" type="text/css" href="CSS1/firstword.css"/>
+		<link rel="stylesheet" type="text/css" href="CSS1/top_test.css"/>
+		
 	</head>
 	<body>
 		<div class="top">
@@ -31,96 +30,52 @@
 					<div id="MyQQ">
 						<img src="imagesUser/QQ二维码.jpg">
 					</div>
-
+		
 				</li>
 			</ul>
 		</div>
-		<div class="mainCenter">
-			<div class="main_top">
-				<div class="headpic"></div>
-			</div>
-			<div class="main_bottom">
-				<p>我是老三，由于各种原因，网站地址可能会变化，家亦然；家随心而定，心随意而变，意识尚且变换，心又何尝不会变呢。</p>
-				<br />
-				<p>目前的老三之家网址：<a href="">暂时未定</a></p>
-
-			</div>
-			<span id="Time"></span>
-		</div>
-		<div class="upto">
-			<img src="image/向上.png" class="up_up">
-			<p>向上滑动以解锁更多</p>
-		</div>
-		<div class="zerobg">
-
-			<div class="link">
-				<p>点击下方图片直达目标区域</p>
-				<ul class="linkPic">
-					<li><a href="https://shanggouquan666.github.io/base64.html">
-							<div class="one">
-								<span class="name">比那名居 天子<br>获取图片项目</span>
-								<img src="https://uploadfile.bizhizu.cn/2015/0127/20150127113406272.jpg.source.jpg"
-									alt="">
-							</div>
-						</a></li>
-
-					<li><a href="https://shanggouquan666.github.io/VCode.html">
-							<div class="one">
-								<span class="name">古灵地 恋<br>验证</span>
-								<img src="https://img.tt98.com/d/file/96kaifa/2019061122008396/008.jpg" alt="">
-							</div>
-						</a></li>
-					<li><a href="">
-							<div class="one">
-								<span class="name">魂魄妖梦</span>
-								<img src="https://wallpaperm.cmcm.com/03436004f6b696ae94787e6798bcdd76.jpg" alt="">
-							</div>
-						</a></li>
-
-				</ul>
-
-				<div class="input">
-					<p id="posts">Posts:</p>
-					<div class="readerBooks">
-						<div class="BooksOne">
-							<p id="titleOne">发布于2021/5/5 19:28:26</p>
-							<a href="https://shanggouquan666.github.io/firstword.html">
-								<h3>虽然这只是发布页，但是还是想做漂亮点</h3>
-							</a>
-							<p id="readerOne">这个地址发布站感觉如何？ </p>
-							<br />
-							<p id="readerBottom">...</p>
-						</div>
-
-						<a href="https://shanggouquan666.github.io/firstword.html"><img src="imagesUser/C92%2001A(古明地%20恋).jpg" alt=""></a>
-
-
-					</div>
-				</div>
-			</div>
-
-		</div>
-
+		
+		<header>
+			
+			<h1>虽然这只是发布页，但是还是想做漂亮点</h1>
+			<a href=""><div class="img"></div></a><p>2021/7/13</p><p>10:55:57</p>
+		</header>
+		
+		<main>
+			<p>这个网站发布页感觉如何？一开始本来打算从零开始开发纯手写代码来着，后来发觉某些地方还是这样比较好。</p>
+			<br>
+			<p>比如在一定制作部分均采取了使用框架来进行开发，毕竟大量使用框架还是可以增加自己使用熟练度的。</p>
+			<br>
+			<p>虽然我个人不是学习后端的程序员，但是在我所可能的地方，我还是会尽力去学习的。</p>
+			<br>
+			<p>我想，在这里保存一些我自己制作的项目，肯定还是不错的。毕竟电脑还是容易出问题的，上次硬盘废了没了那么多东西哭了好久。</p>
+			<br>
+			<p>基本上就是这样了，这就是我这个首页想要说的东西。来张美图结尾。</p>
+			<br>
+			<img src="imagesUser/休息的铃仙.jpg" title="做什了做，休息啦您嘞！">
+			<p id="PicText">休息的铃仙</p>
+		</main>
 		<div class="topping">
 			<a href="javascript:;" id="backTop">回到顶部</a>
 		</div>
-
+		
 		<footer>
 			<span id="Clock"></span>
 			<p id="bottomTitle">Copyright &copy; 2021 XiaoWang.Inc All rights reserved.</p>
 		</footer>
-
 	</body>
+	<script src="js/time.js" type="text/javascript" charset="utf-8"></script>
+	<script src="js/flexible.js" type="text/javascript" charset="utf-8"></script>
 	<script src="js/jquery1.42.min.js" type="text/javascript" charset="utf-8"></script>
 	<script type="text/javascript">
 		var btns = document.getElementById("btn");
 		var divs = document.getElementById("MyQQ");
-
+	
 		btns.onmouseover = function() {
 			divs.style.display = "block";
 			divs.style.opacity = 1;
 			// alert('你就这么想联系我么？你既然都知道看到这里了，就不用我多说什么了把。在下QQ号：1522787661');
-
+	
 		}
 		btns.onmouseout = function() {
 			divs.style.display = "none";
