--- a/firstword.html
+++ b/firstword.html
@@ -38,7 +38,8 @@
 		<header>
 			
 			<h1>虽然这只是发布页，但是还是想做漂亮点</h1>
-			<a href=""><div class="img"></div></a><p>2021/7/13</p><p>10:55:57</p>
+			<a href=""><div class="img"></div></a>
+			<p>2021/7/13</p><p>10:55:57</p>
 		</header>
 		
 		<main>
